Add a comment to GNU Readline config file

--- a/.inputrc
+++ b/.inputrc
@@ -1,5 +1,9 @@
+## Configs for GNU Readline (applies to Bash, etc)
+
+
 # Emacs-style keybinds.
 set editing-mode emacs
+
 
 # Show suggestions after pressing tab once, instead of twice.
 set show-all-if-ambiguous on
@@ -14,10 +18,6 @@ set colored-stats on
 # Colorize the common prefix of entries in tab completion lists.
 set colored-completion-prefix on
 
+
 # Bind alt-semicolon to ctrl-p, enter; i.e. run previous command.
 "\e;": "\C-p\n"
-
-# Bind meta-o to exit shell if last command successful.
-# Gets queued if pressed while a command is running.
-# Can be cancelled with backspace.
-#"\eo": "if [ $? -eq 0 ]; then exit; else false; fi\n"
