Fix tmux swap-pane keybind

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -157,13 +157,10 @@ bind e split-window -c "#{pane_current_path}"
 bind o split-window -c "#{pane_current_path}" -h
 
 # Swap two panes.
-#
-# The syntax `{left-of}` doesn't seem to work in tmux 3.0a, so we use {left}
-# instead, as a rough approximation of what we actually want.
-bind M-i swap-pane -d -t {top}
-bind M-j swap-pane -d -t {left}
-bind M-k swap-pane -d -t {bottom}
-bind M-l swap-pane -d -t {right}
+bind M-i swap-pane -d -t "{up-of}"
+bind M-j swap-pane -d -t "{left-of}"
+bind M-k swap-pane -d -t "{down-of}"
+bind M-l swap-pane -d -t "{right-of}"
 
 
 
