intellij: scroll wheel changes font size

--- a/keyboard/xkb/99-keyboard-layout.conf
+++ b/keyboard/xkb/99-keyboard-layout.conf
@@ -1,10 +1,12 @@
+# See man pages `xorg.conf` and `kbd` for details.
+
 Section "InputClass"
-    Identifier "wqc keyboard layout"
+    Identifier "Custom keyboard layout"
     MatchIsKeyboard "on"
 
     Option "XkbRules" "wqc"
     Option "XkbModel" "pc105"
     Option "XkbLayout" "wqc,us"
     Option "XkbVariant" ""
-    Option "XkbOptions" "grp:shifts_toggle,ctrl:nocaps,custom:ralt_escape"
+    Option "XkbOptions" "grp:shifts_toggle,ctrl:nocaps,ralt_escape"
 EndSection
