--- a/.tmux.conf
+++ b/.tmux.conf
@@ -178,6 +178,7 @@ bind -n M-6 select-window -t 6
 bind -n M-7 select-window -t 7
 bind -n M-8 select-window -t 8
 bind -n M-9 select-window -t 9
+bind -n M-0 select-window -t 10
 
 # Move current pane to target window.
 bind -n M-! join-pane -t :1
