vim, tmux: enable mouse to fix scroll wheel

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,9 @@ if "test $TERM = xterm-256color" \
 # When this was set to 0, I occasionally had issues.
 set -g escape-time 1
 
+# Enable mouse support, so that the scroll wheel works as expected.
+set -g mouse on
+
 # Let nvim (and possibly other programs) know when focus is gained/lost.
 # In nvim, this corresponds to a FocusGained/FocusLost event.
 # https://unix.stackexchange.com/a/383044
