i3: rofi instead of dmenu

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -8,7 +8,7 @@ bindsym $Win+space exec --no-startup-id "alacritty --command tmux_attach"
 bindsym $Win+Return exec --no-startup-id alacritty
 bindsym $Win+semicolon exec --no-startup-id google-chrome
 bindsym $Win+m exec --no-startup-id "emacsclient -a '' -c -n"
-bindsym $Win+p exec --no-startup-id "pgrep xfce4-panel && xfce4-popup-whiskermenu || dmenu_run"
+bindsym $Win+p exec --no-startup-id "pgrep xfce4-panel && xfce4-popup-whiskermenu || rofi -show run || dmenu_run"
 
 # Simple, hacky way to toggle xfce4 taskbar.
 # https://forum.xfce.org/viewtopic.php?id=11220
