tmux: change status bar clock format

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -90,7 +90,7 @@ set -g window-status-separator ""
 set -g status-left "[#S]"
 
 # 12-hour clock in the status bar.
-set -g status-right ' %l:%M%P '
+set -g status-right ' %l:%M %p '
 
 
 
