--- a/.config/redshift.conf
+++ b/.config/redshift.conf
@@ -1,3 +1,11 @@
 [redshift]
 temp-day=5500
 temp-night=3000
+
+; Prevent redshift from failing due to "Unable to get location from provider."
+location-provider=manual
+
+; (37.77 N, 122.42 E) is San Francisco.
+[manual]
+lat=37.77
+lon=122.42
