light themes for alacritty, tmux, nvim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,6 +56,11 @@ set -g status-style fg=black,bg=brightblack
 set -g pane-active-border-style fg=brightblack
 set -g pane-border-style fg=black
 
+# Light theme.
+#set -g status-style fg=brightwhite,bg=green
+#set -g pane-active-border-style fg=green
+#set -g pane-border-style fg=brightwhite
+
 # Status bar initially hidden.
 set -g status off
 
