--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -17,3 +17,8 @@ mouse:
 hints:
   # Disable clicking on URI links.
   enabled: []
+
+# Light theme; requires downloading themes from
+# https://github.com/alacritty/alacritty-theme
+#import:
+#  - ~/.config/alacritty/themes/themes/ayu_light.yaml
