--- a/.tmux.conf
+++ b/.tmux.conf
@@ -95,7 +95,9 @@ set -g window-status-separator ""
 set -g status-left "[#S]"
 
 # 12-hour clock in the status bar.
-set -g status-right ' %l:%M %p '
+#set -g status-right ' %l:%M %p '
+# Disabled, for now.
+set -g status-right ''
 
 
 
