Fix audio up/down/mute hotkeys

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -155,11 +155,16 @@ mouse_warping none
 #
 # Copy-pasting from this reddit post got them to work as expected:
 # https://www.reddit.com/r/i3wm/comments/2wbv8x/question_how_to_manage_audio_with_i3/
-bindsym XF86AudioRaiseVolume exec "amixer -q sset Master,0 1+ unmute"
-bindsym XF86AudioLowerVolume exec "amixer -q sset Master,0 1- unmute"
-bindsym XF86AudioMute exec "amixer -q sset Master,0 toggle"
-
-
+#bindsym XF86AudioRaiseVolume exec "amixer -q sset Master,0 1+ unmute"
+#bindsym XF86AudioLowerVolume exec "amixer -q sset Master,0 1- unmute"
+#bindsym XF86AudioMute exec "amixer -q sset Master,0 toggle"
+#
+# The above isn't working for me on my laptop right now, so I copied-pasted
+# this from stack overflow, and it seems to work.
+# https://askubuntu.com/questions/97936/terminal-command-to-set-audio-volume
+bindsym XF86AudioRaiseVolume exec "pactl set-sink-volume @DEFAULT_SINK@ +10%"
+bindsym XF86AudioLowerVolume exec "pactl set-sink-volume @DEFAULT_SINK@ -10%"
+bindsym XF86AudioMute exec "pactl set-sink-mute @DEFAULT_SINK@ toggle"
 
 # Start i3bar to display a workspace bar.
 bar {
