--- a/.config/sway/config
+++ b/.config/sway/config
@@ -7,7 +7,7 @@
 ### Variables
 #
 # Logo key. Use Mod1 for Alt.
-set $mod Mod4
+set $win Mod4
 # Home row direction keys, like vim
 set $left h
 set $down j
@@ -65,102 +65,102 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 # Basics:
 #
     # Start a terminal
-    bindsym $mod+Return exec $term
+    bindsym $win+Return exec $term
 
     # Kill focused window
-    bindsym $mod+Shift+q kill
+    bindsym $win+Shift+q kill
 
     # Start your launcher
-    bindsym $mod+d exec $menu
+    bindsym $win+d exec $menu
 
-    # Drag floating windows by holding down $mod and left mouse button.
-    # Resize them with right mouse button + $mod.
+    # Drag floating windows by holding down $win and left mouse button.
+    # Resize them with right mouse button + $win.
     # Despite the name, also works for non-floating windows.
     # Change normal to inverse to use left mouse button for resizing and right
     # mouse button for dragging.
-    floating_modifier $mod normal
+    floating_modifier $win normal
 
     # Reload the configuration file
-    bindsym $mod+Shift+c reload
+    bindsym $win+Shift+c reload
 
     # Exit sway (logs you out of your Wayland session)
-    bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
+    bindsym $win+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
 #
 # Moving around:
 #
     # Move your focus around
-    bindsym $mod+$left focus left
-    bindsym $mod+$down focus down
-    bindsym $mod+$up focus up
-    bindsym $mod+$right focus right
-    # Or use $mod+[up|down|left|right]
-    bindsym $mod+Left focus left
-    bindsym $mod+Down focus down
-    bindsym $mod+Up focus up
-    bindsym $mod+Right focus right
+    bindsym $win+$left focus left
+    bindsym $win+$down focus down
+    bindsym $win+$up focus up
+    bindsym $win+$right focus right
+    # Or use $win+[up|down|left|right]
+    bindsym $win+Left focus left
+    bindsym $win+Down focus down
+    bindsym $win+Up focus up
+    bindsym $win+Right focus right
 
     # Move the focused window with the same, but add Shift
-    bindsym $mod+Shift+$left move left
-    bindsym $mod+Shift+$down move down
-    bindsym $mod+Shift+$up move up
-    bindsym $mod+Shift+$right move right
+    bindsym $win+Shift+$left move left
+    bindsym $win+Shift+$down move down
+    bindsym $win+Shift+$up move up
+    bindsym $win+Shift+$right move right
     # Ditto, with arrow keys
-    bindsym $mod+Shift+Left move left
-    bindsym $mod+Shift+Down move down
-    bindsym $mod+Shift+Up move up
-    bindsym $mod+Shift+Right move right
+    bindsym $win+Shift+Left move left
+    bindsym $win+Shift+Down move down
+    bindsym $win+Shift+Up move up
+    bindsym $win+Shift+Right move right
 #
 # Workspaces:
 #
     # Switch to workspace
-    bindsym $mod+1 workspace number 1
-    bindsym $mod+2 workspace number 2
-    bindsym $mod+3 workspace number 3
-    bindsym $mod+4 workspace number 4
-    bindsym $mod+5 workspace number 5
-    bindsym $mod+6 workspace number 6
-    bindsym $mod+7 workspace number 7
-    bindsym $mod+8 workspace number 8
-    bindsym $mod+9 workspace number 9
-    bindsym $mod+0 workspace number 10
+    bindsym $win+1 workspace number 1
+    bindsym $win+2 workspace number 2
+    bindsym $win+3 workspace number 3
+    bindsym $win+4 workspace number 4
+    bindsym $win+5 workspace number 5
+    bindsym $win+6 workspace number 6
+    bindsym $win+7 workspace number 7
+    bindsym $win+8 workspace number 8
+    bindsym $win+9 workspace number 9
+    bindsym $win+0 workspace number 10
     # Move focused container to workspace
-    bindsym $mod+Shift+1 move container to workspace number 1
-    bindsym $mod+Shift+2 move container to workspace number 2
-    bindsym $mod+Shift+3 move container to workspace number 3
-    bindsym $mod+Shift+4 move container to workspace number 4
-    bindsym $mod+Shift+5 move container to workspace number 5
-    bindsym $mod+Shift+6 move container to workspace number 6
-    bindsym $mod+Shift+7 move container to workspace number 7
-    bindsym $mod+Shift+8 move container to workspace number 8
-    bindsym $mod+Shift+9 move container to workspace number 9
-    bindsym $mod+Shift+0 move container to workspace number 10
+    bindsym $win+Shift+1 move container to workspace number 1
+    bindsym $win+Shift+2 move container to workspace number 2
+    bindsym $win+Shift+3 move container to workspace number 3
+    bindsym $win+Shift+4 move container to workspace number 4
+    bindsym $win+Shift+5 move container to workspace number 5
+    bindsym $win+Shift+6 move container to workspace number 6
+    bindsym $win+Shift+7 move container to workspace number 7
+    bindsym $win+Shift+8 move container to workspace number 8
+    bindsym $win+Shift+9 move container to workspace number 9
+    bindsym $win+Shift+0 move container to workspace number 10
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
 #
 # Layout stuff:
 #
     # You can "split" the current object of your focus with
-    # $mod+b or $mod+v, for horizontal and vertical splits
+    # $win+b or $win+v, for horizontal and vertical splits
     # respectively.
-    bindsym $mod+b splith
-    bindsym $mod+v splitv
+    bindsym $win+b splith
+    bindsym $win+v splitv
 
     # Switch the current container between different layout styles
-    bindsym $mod+s layout stacking
-    bindsym $mod+w layout tabbed
-    bindsym $mod+e layout toggle split
+    bindsym $win+s layout stacking
+    bindsym $win+w layout tabbed
+    bindsym $win+e layout toggle split
 
     # Make the current focus fullscreen
-    bindsym $mod+f fullscreen
+    bindsym $win+f fullscreen
 
     # Toggle the current focus between tiling and floating mode
-    bindsym $mod+Shift+space floating toggle
+    bindsym $win+Shift+space floating toggle
 
     # Swap focus between the tiling area and the floating area
-    bindsym $mod+space focus mode_toggle
+    bindsym $win+space focus mode_toggle
 
     # Move focus to the parent container
-    bindsym $mod+a focus parent
+    bindsym $win+a focus parent
 #
 # Scratchpad:
 #
@@ -168,11 +168,11 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     # You can send windows there and get them back later.
 
     # Move the currently focused window to the scratchpad
-    bindsym $mod+Shift+minus move scratchpad
+    bindsym $win+Shift+minus move scratchpad
 
     # Show the next scratchpad window or hide the focused scratchpad window.
     # If there are multiple scratchpad windows, this command cycles through them.
-    bindsym $mod+minus scratchpad show
+    bindsym $win+minus scratchpad show
 #
 # Resizing containers:
 #
@@ -196,7 +196,7 @@ mode "resize" {
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
-bindsym $mod+r mode "resize"
+bindsym $win+r mode "resize"
 
 #
 # Status Bar:
