--- a/.config/sway/config
+++ b/.config/sway/config
@@ -9,10 +9,10 @@
 # Modifier keys.
 set $win Mod4
 set $alt Mod1
-# Home row direction keys, like vim
-set $left h
-set $down j
-set $up k
+# Home row direction keys.
+set $left j
+set $down k
+set $up i
 set $right l
 # Your preferred terminal emulator
 set $term alacritty
