sway: switch from firefox to chrome

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -14,7 +14,7 @@ set $up i
 set $right l
 # Your preferred terminal emulator and browser
 set $term alacritty
-set $browser firefox
+set $browser google-chrome
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
