--- a/.config/git/config
+++ b/.config/git/config
@@ -4,7 +4,7 @@
 # Use my personal email, except when at work.
 [include]
     path = personal-email
-    path = ~/work-configs/gitconfig
+    path = ~/.work-configs/gitconfig
 
 # Don't use my work email for this repo.
 [includeIf "gitdir:~/.config-files/.git"]
