tmux: increase scrollback history size

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,8 +23,8 @@ set -g mouse on
 # https://unix.stackexchange.com/a/383044
 set -g focus-events on
 
-# Keep way more history. 100,000 lines shouldn't be more than a few MB.
-set -g history-limit 100000
+# Keep _way_ more history. 1,000,000 lines shouldn't be more than 0.1 GB.
+set -g history-limit 1000000
 
 # Show messages in the status line for longer (1.25 seconds, default is 0.75).
 set -g display-time 1250
