Add cc65 to PATH

--- a/.config/environment.d/env.conf
+++ b/.config/environment.d/env.conf
@@ -6,6 +6,7 @@ PATH=$HOME/.cargo/bin:$PATH
 PATH=/usr/local/go/bin:$PATH
 GOPATH=$HOME/.go
 PATH=$GOPATH/bin:$PATH
+PATH=/opt/cc65/bin:$PATH
 
 # Set editor for git commit messages, etc.
 VISUAL=/usr/bin/nvim
