Quiet emscripten sdk env setup

--- a/.config/environment.d/env.conf
+++ b/.config/environment.d/env.conf
@@ -11,3 +11,6 @@ PATH=/opt/cc65/bin:$PATH
 # Set editor for git commit messages, etc.
 VISUAL=/usr/bin/nvim
 EDITOR=$VISUAL
+
+# Misc.
+EMSDK_QUIET=1
