--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@
 
 # When TERM is set to xterm-256color (or similar) outisde tmux, assume support
 # for true (24-bit) color.
-set -ga terminal-overrides *-256color:Tc
+set -ga terminal-overrides *-256color:Tc,alacritty*:Tc
 
 # Correctly set TERM inside tmux.
 if "test $TERM = xterm-256color" \
