Remove jj aliases for now
Would be good to properly learn this thing at some point,
instead of just translating my existing git workflow
command-by-command.

--- a/.config/jj/config.toml
+++ b/.config/jj/config.toml
@@ -6,5 +6,6 @@ email = "khollbach@gmail.com"
 
 [ui]
 default-command = "log"
+movement.edit = true
 diff-formatter = ":git"
 pager = "delta --pager less"
