vscode: hide ai chat sidebar

--- a/settings/vscode/settings.json
+++ b/settings/vscode/settings.json
@@ -63,5 +63,6 @@
 
     "editor.lineNumbers": "on",
     "rust-analyzer.checkOnSave": true,
-    "rust-analyzer.diagnostics.enable": true
+    "rust-analyzer.diagnostics.enable": true,
+    "workbench.secondarySideBar.defaultVisibility": "hidden"
 }
