Fix keyd keyboard remapping on laptop

--- a/keyboard/keyd/laptop.conf
+++ b/keyboard/keyd/laptop.conf
@@ -1,8 +1,12 @@
 # Configuration for my laptop keyboard.
+#
+# I wasn't able to get the [ids] section to match just my laptop keyboard, so
+# it's currently a manual process: copy this file over and remove the default
+# config file.
 
 [ids]
 
-0001:0001:a38e6885
+*
 
 include generic-config
 
